--- a/sass/layout/_experience.scss
+++ b/sass/layout/_experience.scss
@@ -57,7 +57,7 @@ section {
 			//flex: 3;
 			//border: 1px solid red;
 			position: relative;
-			height: 135vw;
+			height: 145vw;
 			p {
 				//display: none;
 				position: absolute;
